# advent-of-code-2025

./: .bazelrc  .gitignore  CLAUDE.md  GITHUB_PAGES.md  MODULE.bazel  README.md  _config.yml  index.md  performance_results.csv  performance_results.txt
.buildkite/: pipeline.yml
docs/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  performance.md
docs/visualizations/: day01-visualization.html  day02-visualization.html  day03-visualization.html  day04-visualization.html  day05-visualization.html  day06-visualization.html  day07-visualization.html  day08-visualization.html  day09-visualization.html  day10-visualization.html  day11-visualization.html  day12-visualization.html  visualization-styles.css
scripts/: README.md  create_day_annotation.sh  generate_day_steps.sh  generate_performance_doc.py  performance_test.sh  test_summary.sh
src/main/com/stiksy/aoc2025/: BUILD.bazel  Main.java
src/main/com/stiksy/aoc2025/day01/: BUILD.bazel
src/main/com/stiksy/aoc2025/day02/: BUILD.bazel  Day02.java
src/main/com/stiksy/aoc2025/day03/: BUILD.bazel  Day03.java
src/main/com/stiksy/aoc2025/day04/: BUILD.bazel  Day04.java
src/main/com/stiksy/aoc2025/day05/: BUILD.bazel  Day05.java
src/main/com/stiksy/aoc2025/day06/: BUILD.bazel  Day06.java
src/main/com/stiksy/aoc2025/day07/: BUILD.bazel  Day07.java
src/main/com/stiksy/aoc2025/day08/: BUILD.bazel  Day08.java
src/main/com/stiksy/aoc2025/day09/: BUILD.bazel  Day09.java
src/main/com/stiksy/aoc2025/day10/: BUILD.bazel  Day10.java
src/main/com/stiksy/aoc2025/day11/: BUILD.bazel  Day11.java
src/main/com/stiksy/aoc2025/day12/: BUILD.bazel  Day01.java  Day12.java
src/main/com/stiksy/aoc2025/util/: BUILD.bazel  InputReader.java
src/main/resources/day02/: BUILD.bazel
src/test/com/stiksy/aoc2025/: BUILD.bazel  MainTest.java
src/test/com/stiksy/aoc2025/day01/: BUILD.bazel
src/test/com/stiksy/aoc2025/day02/: BUILD.bazel  Day02Test.java
src/test/com/stiksy/aoc2025/day03/: BUILD.bazel  Day03Test.java
src/test/com/stiksy/aoc2025/day04/: BUILD.bazel  Day04Test.java
src/test/com/stiksy/aoc2025/day05/: BUILD.bazel  Day05Test.java
src/test/com/stiksy/aoc2025/day06/: BUILD.bazel  Day06Test.java
src/test/com/stiksy/aoc2025/day07/: BUILD.bazel  Day07Test.java
src/test/com/stiksy/aoc2025/day08/: BUILD.bazel  Day08Test.java
src/test/com/stiksy/aoc2025/day09/: BUILD.bazel  Day09Test.java
src/test/com/stiksy/aoc2025/day10/: BUILD.bazel  Day10Test.java
src/test/com/stiksy/aoc2025/day11/: BUILD.bazel  Day11Test.java
src/test/com/stiksy/aoc2025/day12/: BUILD.bazel  Day01Test.java  Day12Test.java
src/test/com/stiksy/aoc2025/util/: BUILD.bazel  InputReaderTest.java
src/test/resources/util/: BUILD.bazel  test_integers.txt  test_longs.txt
