# JUnit 4 test target
java_test(
    name = "tests",
    srcs = glob(["**/*.java"]),
    test_class = "com.stiksy.aoc2025.MainTest",  # Optional: specify a test suite class
    deps = [
        "//src/main/com/stiksy/aoc2025:Main",
        "@maven//:junit_junit",  # JUnit 4 dependency from Maven
    ],
)