load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "Day01",
    main_class = "com.stiksy.aoc2025.day01.Day01",
    srcs = ["Day01.java"],
    resources = ["//src/main/resources/day01:input"],
    deps = ["//src/main/com/stiksy/aoc2025/util:util"],
)
