load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "Day02",
    main_class = "com.stiksy.aoc2025.day02.Day02",
    srcs = ["Day02.java"],
    resources = ["//src/main/resources/day02:input"],
    deps = ["//src/main/com/stiksy/aoc2025/util:util"],
)
