load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "Day03",
    main_class = "com.stiksy.aoc2025.day03.Day03",
    srcs = ["Day03.java"],
    resources = ["//src/main/resources/day03:input"],
    deps = ["//src/main/com/stiksy/aoc2025/util:util"],
)
