load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "Day04",
    main_class = "com.stiksy.aoc2025.day04.Day04",
    srcs = ["Day04.java"],
    resources = ["//src/main/resources/day04:input"],
    deps = ["//src/main/com/stiksy/aoc2025/util:util"],
)
