load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "Day06",
    main_class = "com.stiksy.aoc2025.day06.Day06",
    srcs = ["Day06.java"],
    resources = ["//src/main/resources/day06:input"],
    deps = ["//src/main/com/stiksy/aoc2025/util:util"],
)
