load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "Day11",
    main_class = "com.stiksy.aoc2025.day11.Day11",
    srcs = ["Day11.java"],
    resources = ["//src/main/resources/day11:input"],
    deps = ["//src/main/com/stiksy/aoc2025/util:util"],
)
