load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "Day02Test",
    srcs = ["Day02Test.java"],
    test_class = "com.stiksy.aoc2025.day02.Day02Test",
    deps = [
        "//src/main/com/stiksy/aoc2025/day02:Day02",
        "//src/main/com/stiksy/aoc2025/util:util",
        "@maven//:junit_junit",
    ],
    data = ["//src/main/resources/day02:input"],
)
