load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "Day04Test",
    srcs = ["Day04Test.java"],
    test_class = "com.stiksy.aoc2025.day04.Day04Test",
    deps = [
        "//src/main/com/stiksy/aoc2025/day04:Day04",
        "//src/main/com/stiksy/aoc2025/util:util",
        "@maven//:junit_junit",
    ],
    data = ["//src/main/resources/day04:input"],
)
