load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "Day07Test",
    srcs = ["Day07Test.java"],
    test_class = "com.stiksy.aoc2025.day07.Day07Test",
    deps = [
        "//src/main/com/stiksy/aoc2025/day07:Day07",
        "//src/main/com/stiksy/aoc2025/util:util",
        "@maven//:junit_junit",
    ],
    data = ["//src/main/resources/day07:input"],
)
