load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "Day11Test",
    srcs = ["Day11Test.java"],
    test_class = "com.stiksy.aoc2025.day11.Day11Test",
    deps = [
        "//src/main/com/stiksy/aoc2025/day11:Day11",
        "//src/main/com/stiksy/aoc2025/util:util",
        "@maven//:junit_junit",
    ],
)
